[package]
name = "adbc-clickhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
adbc_core = "0.20.0"
adbc_ffi = { version = "0.20.0", optional = true }

arrow-array = "56.2.0"
arrow-buffer = "56.2.0"
arrow-schema = "56.2.0"
serde_arrow = { version = "0.13.7", features = ["arrow-56"] }

clickhouse-arrow = { version = "0.2.0", features = ["derive"] }

futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"

[build-dependencies]
cargo_metadata = "0.23.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
ffi = ["dep:adbc_ffi"]
